# letterboxd-watchable

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  show_watchable.py  update_watchlist.py
letterboxd_watchable/: db.py
