[tool.poetry]
name = "letterboxd-watchable"
version = "0.1.0"
description = "Show what movies on watchlist are streaming"
authors = ["Milo Mordaunt <milomord@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
